# pyvenvmerge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/pyvenvmerge/: __main__.py  cli.py  orchestrator.py
src/pyvenvmerge/core/: builder.py  dependency_graph.py  executor.py  extractor.py  inspector.py  merger.py  planner.py  report_generator.py  reporting.py  resolver.py  specifier_merge.py  validator.py
src/pyvenvmerge/infra/: exceptions.py  subprocess_runner.py
src/pyvenvmerge/models/: conflict.py  environment.py  merge_plan.py  merge_report.py  requirement.py
tests/: test_conflicts.py  test_dependency_types.py  test_integration_merge.py  test_json_output.py  test_merger.py  test_planner.py  test_report_generator.py  test_reporting.py  test_specifier_merge.py  test_strategies.py
