[project]
name = "pyvenvmerge"
version = "0.1.0"
authors = [{ name="Vishwanath M M", email="vishwanathmm2005@gmail.com" }]
description = "Safely merge multiple Python virtual environments by reconstructing dependencies."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/vishwanathdvgmm/pyvenvmerge"
Issues = "https://github.com/vishwanathdvgmm/pyvenvmerge/issues"

dependencies = [
    "packaging"
]

[project.scripts]
pyvenvmerge = "pyvenvmerge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"