[project]
name = "pyvenvmerge"
version = "0.2.0-dev"
authors = [{ name="Vishwanath M M", email="vishwanathmm2005@gmail.com" }]
description = "Safely merge multiple Python virtual environments by reconstructing dependencies."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
license-files = ["LICENSE"]

dependencies = [
    "packaging"
]

[project.urls]
Homepage = "https://github.com/vishwanathdvgmm/pyvenvmerge"
Issues = "https://github.com/vishwanathdvgmm/pyvenvmerge/issues"

[project.scripts]
pyvenvmerge = "pyvenvmerge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"