[project]
name = "pyvenvmerge"
version = "0.2.0"
authors = [{ name="Vishwanath M M", email="vishwanathmm2005@gmail.com" }]
description = "Safely merge multiple Python virtual environments by reconstructing dependencies."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]
license = { text = "MIT" }
license-files = ["LICENSE"]

dependencies = [
    "packaging"
]

[project.urls]
Homepage = "https://github.com/vishwanathdvgmm/pyvenvmerge"
Issues = "https://github.com/vishwanathdvgmm/pyvenvmerge/issues"

[project.scripts]
pyvenvmerge = "pyvenvmerge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"